# emmc

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/emmc/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/emmc_kotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: mmc
app/src/main/assets/armeabi-v7a/: mmc
app/src/main/assets/x86/: mmc
app/src/main/assets/x86_64/: mmc
app/src/main/cpp/: CMakeLists.txt  lsmmc.c  mmc.c  mmc.h  mmc_cmds.c  mmc_cmds.h  my_cmds.c  my_cmds.h  native-lib.cpp
app/src/main/java/com/example/emmc/: CopyElfs.java  HelpActivity.java  MainActivity.java  Read_ExctActivity.java  my_SpinnerAdapter.java
app/src/main/java/com/example/emmc_kotlin/: CopyElfs.kt  HelpActivity.kt  MainActivity.kt  OldTest.kt  OldTestShow.kt  RWTest.kt  RWTestShow.kt  ReadActivity.kt
app/src/main/res/layout/: activity_help.xml  activity_main.xml  activity_old_test.xml  activity_old_test_show.xml  activity_r_w_test.xml  activity_r_w_test_show.xml  activity_read.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/emmc/: ExampleUnitTest.java
app/src/test/java/com/example/emmc_kotlin/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
